# fast-api-beetrack

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  DOCKER.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.dev  GITHUB_SETUP.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: items.py
app/core/: config.py  logging.py
app/middleware/: logging.py
app/schemas/: item.py
app/services/: __init__.py  auth_token_cache_service.py  http_client_service.py  item_service.py  oauth_authentication_service.py
docs/: PYDANTIC_VALIDATION_EXAMPLES.md  logging_integration.md
scripts/: README.md  docker.sh  run.sh
specs/: oauth_authentication_token_management.md
tests/: conftest.py  test_main.py
tests/api/: __init__.py
tests/api/v1/: __init__.py  test_router.py
tests/api/v1/endpoints/: __init__.py  test_items.py
tests/core/: __init__.py  test_config.py  test_logging.py
tests/middleware/: test_logging.py
tests/schemas/: __init__.py  test_item.py
tests/services/: __init__.py  test_auth_token_cache_service.py  test_http_client_service.py  test_item_service.py  test_oauth_authentication_service.py
